--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -158,16 +158,21 @@ article.coming-soon h1 {
 
 @media screen and (max-width: 1700px) {
   $base-font-size       : 24px;
-  $base-line-height     : 36px;
+  $base-line-height     : 38px;
   @include establish-baseline;
 }
 
-/* < 825px */
+/* < 1100px */
+
+@media screen and (max-width: 1100px) {
+  $base-font-size       : 21px;
+  $base-line-height     : 34px;
+  @include establish-baseline;
+}
+
+/* < 875px */
 
 @media screen and (max-width: 875px) {
-  $base-font-size       : 21px;
-  $base-line-height     : 31px;
-  @include establish-baseline;
   .container {
     max-width: 24em;
   }
