--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -172,18 +172,16 @@ p {
 
 /* line 105, ../sass/_base.scss */
 em {
-  font-size: 0.867em;
-  line-height: 1.846em;
   font-style: italic;
 }
 
-/* line 110, ../sass/_base.scss */
+/* line 109, ../sass/_base.scss */
 ::selection {
   background: #cccccc;
   /* Safari */
 }
 
-/* line 113, ../sass/_base.scss */
+/* line 112, ../sass/_base.scss */
 ::-moz-selection {
   background: #cccccc;
   /* Firefox */
@@ -431,11 +429,11 @@ article.coming-soon h1 {
   /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   html {
     font-size: 24px;
-    line-height: 1.5em;
+    line-height: 1.583em;
   }
 }
-/* < 825px */
-@media screen and (max-width: 875px) {
+/* < 1100px */
+@media screen and (max-width: 1100px) {
   /* line 61, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   * html {
     font-size: 131.25%;
@@ -444,30 +442,32 @@ article.coming-soon h1 {
   /* line 64, ../../../../../Users/mikeywills/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
   html {
     font-size: 21px;
-    line-height: 1.476em;
+    line-height: 1.619em;
   }
-
-  /* line 171, ../sass/screen.scss */
+}
+/* < 875px */
+@media screen and (max-width: 875px) {
+  /* line 176, ../sass/screen.scss */
   .container {
     max-width: 24em;
   }
 
-  /* line 174, ../sass/screen.scss */
+  /* line 179, ../sass/screen.scss */
   img#logo {
     position: inherit;
     margin-bottom: 0.25em;
   }
 
-  /* line 178, ../sass/screen.scss */
+  /* line 183, ../sass/screen.scss */
   h1 {
     font-size: 2.095em;
-    line-height: 1.409em;
+    line-height: 1.545em;
   }
 
-  /* line 179, ../sass/screen.scss */
+  /* line 184, ../sass/screen.scss */
   h2 {
     font-size: 1.238em;
-    line-height: 1.192em;
+    line-height: 1.308em;
   }
 }
 /* < 490px */
@@ -483,7 +483,7 @@ article.coming-soon h1 {
     line-height: 1.5em;
   }
 
-  /* line 188, ../sass/screen.scss */
+  /* line 193, ../sass/screen.scss */
   .container {
     padding: 0 0.75em;
   }
